--- a/recenze.html
+++ b/recenze.html
@@ -46,7 +46,7 @@
         <div class="section__wrapper">
             <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute"></h3>
-                <p class="section__text section__text--border">Vaše recenze nám posílejte na email</p>
+                <p class="section__text section__text--border">Vaše recenze nám prosím posílejte na email: langos88@seznam.cz a my je zde zveřejníme.</p>
             </section>
         </div>
     </main>
