--- a/recenze.html
+++ b/recenze.html
@@ -48,6 +48,11 @@
                 <h3 class="section__heading section__heading_main section__heading--absolute"></h3>
                 <p class="section__text section__text--border">Vaše recenze nám prosím posílejte na email: langos88@seznam.cz a my je zde zveřejníme.</p>
             </section>
+            <section class="section main__section">
+                <h3 class="section__heading section__heading_main section__heading--absolute">Filip Vlček - tatínek Majdy</h3>
+                <p class="section__text section__text--border">Dcera se zúčastnila třech ročníků příměstského tábora JS Vydlákov. 
+                    Pokaždé byla velmi spokojená, bavily jí hry a ježdění na koni. Nejvíc ji za horkých dnů potěšilo plavení koní. </p>
+            </section>
         </div>
     </main>
 
