--- a/recenze.html
+++ b/recenze.html
@@ -44,7 +44,7 @@
     <main id="recenze" class="main">
         <h2 class="main__heading">Recenze</h2>
         <div class="section__wrapper">
-            <p class="section__text section__text--border">Vaše recenze nám prosím posílejte na email: langos88@seznam.cz a my je zde zveřejníme.</p>
+            <p class="section__text section__text--border">Vaše recenze našich akcí nám prosím posílejte na email: langos88@seznam.cz a my je zde zveřejníme.</p>
             
             <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Filip Vlček - tatínek Majdy</h3>
