--- a/recenze.html
+++ b/recenze.html
@@ -43,12 +43,17 @@
     </header>
     <main id="recenze" class="main">
         <h2 class="main__heading">Recenze</h2>
-        <p class="section__text section__text--border">Vaše recenze našich akcí nám prosím posílejte na email: langos88@seznam.cz a my je zde zveřejníme.</p>
+        <p class="section__text section__text--border">Vaše recenze našich akcí nám prosím posílejte na email: langos88@seznam.cz a my je zde zveřejníme. Děkujeme.</p>
         <div class="section__wrapper">
             <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Filip Vlček - tatínek Majdy</h3>
                 <p class="section__text section__text--border">Dcera se zúčastnila třech ročníků příměstského tábora JS Vydlákov. 
                     Pokaždé byla velmi spokojená, bavily jí hry a ježdění na koni. Nejvíc ji za horkých dnů potěšilo plavení koní. </p>
+            </section>
+        </div>
+         <h3 class="section__heading section__heading_main section__heading--absolute">Lucie Staňková</h3>
+                <p class="section__text section__text--border">Dětského dne JS Vydlákov jsme se zúčastnili s dětmi již podruhé. 
+                    Bylo to příjemně strávené dopoledne, děti plnily úkoly a nakonec se povozily na koních. </p>
             </section>
         </div>
     </main>
