--- a/recenze.html
+++ b/recenze.html
@@ -51,6 +51,8 @@
                     Pokaždé byla velmi spokojená, bavily jí hry a ježdění na koni. Nejvíc ji za horkých dnů potěšilo plavení koní. </p>
             </section>
         </div>
+          <div class="section__wrapper">
+            <section class="section main__section">
          <h3 class="section__heading section__heading_main section__heading--absolute">Lucie Staňková</h3>
                 <p class="section__text section__text--border">Dětského dne JS Vydlákov jsme se zúčastnili s dětmi již podruhé. 
                     Bylo to příjemně strávené dopoledne, děti plnily úkoly a nakonec se povozily na koních. </p>
