--- a/recenze.html
+++ b/recenze.html
@@ -53,7 +53,7 @@
         </div>
           <div class="section__wrapper">
             <section class="section main__section">
-         <h3 class="section__heading section__heading_main section__heading--absolute">Lucie Staňková</h3>
+         <h3 class="section__heading section__heading_main section__heading--absolute">Lucie Staňková - maminka Anetky, Máji a Rózy</h3>
                 <p class="section__text section__text--border">Dětského dne JS Vydlákov jsme se zúčastnili s dětmi již podruhé. 
                     Bylo to příjemně strávené dopoledne, děti plnily úkoly a nakonec se povozily na koních. </p>
             </section>
