--- a/recenze.html
+++ b/recenze.html
@@ -61,7 +61,7 @@
          <div class="section__wrapper">
             <section class="section main__section">
          <h3 class="section__heading section__heading_main section__heading--absolute">paní Stará - maminka Apolenky</h3>
-                <p class="section__text section__text--border">Moje dcera se velmi radovala z plavení koní, to bylo pro ni opravdu velké plus. 
+                <p class="section__text section__text--border">Moje dcera se na příměstském táboře velmi radovala z plavení koní, to bylo pro ni opravdu velké plus. 
                     Strašně ji bavilo česat poníky. Bavila ji i hra Bota, ta byla zábavná a potom o ní ještě mluvila s paní učitelkou ve škole a hrály ji na tělocviku. </p>
             </section>
         </div>
