--- a/cenik.html
+++ b/cenik.html
@@ -51,10 +51,10 @@
 
             <div class="prize_item">
                 <h3 class="prize_item__heading">INDIVIDUÁLNÍ NABÍDKA</h3>
-                <p class="prize_item__text prize_item__prize--line">Individuální trénink nebo vyjížďka</p>
+                <p class="prize_item__text prize_item__prize--line">Individuální trénink nebo vyjížďka - max. váha jezdce 80kg</p>
                 <div class="table prize_item__table">
                     
-                        <div class="table__item">Trénink na jízdárně</div>
+                        <div class="table__item">Trénink na jízdárně, max. váha jezdce 80kg</div>
                         <div class="table__item table__item--right">500,- /45 min</div>
 
                         <div class="table__item">Vyjížďka do přírody s doprovodem, max. váha jezdce 80kg</div>
