--- a/cenik.html
+++ b/cenik.html
@@ -51,7 +51,7 @@
 
             <div class="prize_item">
                 <h3 class="prize_item__heading">INDIVIDUÁLNÍ NABÍDKA</h3>
-                <p class="prize_item__text prize_item__prize--line">Individuální trénink nebo vyjížďka - max. váha jezdce 80kg</p>
+                <p class="prize_item__text prize_item__prize--line">Individuální trénink nebo vyjížďka - max. váha jezdce 80kg!!</p>
                 <div class="table prize_item__table">
                     
                         <div class="table__item">Trénink na jízdárně, max. váha jezdce 80kg</div>
