--- a/recenze.html
+++ b/recenze.html
@@ -65,6 +65,13 @@
                     Strašně ji bavilo česat poníky. Bavila ji i hra Bota, ta byla zábavná a potom o ní ještě mluvila s paní učitelkou ve škole a hrály ji na tělocviku. </p>
             </section>
         </div>
+         <div class="section__wrapper">
+            <section class="section main__section">
+                <h3 class="section__heading section__heading_main section__heading--absolute">Anetka Staňková - účastnice příměstského tábora</h3>
+                <p class="section__text section__text--border">Na táboře se mi nejvíc líbily programy, které pro nás měly holky nachystané, každý den jsme dělali něco jiného.
+            Hráli jsme spoustu her a měli jsme tam různé soutěže. </p>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
