--- a/recenze.html
+++ b/recenze.html
@@ -72,6 +72,13 @@
             Hráli jsme spoustu her a měli jsme tam různé soutěže. </p>
             </section>
         </div>
+        <div class="section__wrapper">
+            <section class="section main__section">
+                <h3 class="section__heading section__heading_main section__heading--absolute">Johanka Petrof - účastnice příměstského tábora</h3>
+                <p class="section__text section__text--border">Líbilo se mi - práce s koňma, aktivity, které pro nás holky chystaly, soutěže v týmech a plavení. Na konci byly mini skokové závody pro všechny. 
+                    Líbilo se mi, že se všichni naučili minimálně základy a zvládli ovládat koně na konci tábora sami. :-) </p>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
