--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
                 <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
                 <p class="section__text section__text--border">Letos se můžete těšit na jarní Dětský den, dále na pět turnusů letních příměstských táborů a na podzimní Hubertovu jízdu.  
                     Pro více informací sledujte náš web a Instagram.
+                     <div class="section__img img_wrapper">
+                 <figure class="img_container__part">
+                                <img src="./imgs/tabor2025.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                          </div>
                      </p>
                       <p class="section__text section__text--border">Zahrádkáři mají možnost odběru koňského hnoje zdarma. Hnůj je smíchaný se slámou. Ke kontejneru je snadné dojet autem.  
                      Bližší informace na tel.č. 739 550 505.    
