--- a/tabor.html
+++ b/tabor.html
@@ -44,6 +44,13 @@
             <h2  class="section__heading">Příměstský tábor</h2>
             <p class="section__text">Naše jezdecká stáj Vydlákov pořádá každý rok příměstské tábory u koní.</p>  
             <h3 class="section__heading section__heading--red">Začátek prvního letošního turnusu už se blíží!</h3>
+              <div class="section__img img_wrapper">
+                 <figure class="img_container__part">
+                                <img src="./imgs/tabor2025.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                          </div>
             <p class="section__text">Podrobné informace i fotografie právě probíhajících turnusů najdete zde: </p>
               <div class="year_box year_box--width">
                 <a href="./tabory2024.html#tabory2024" class="year_box__text">Tábory 2024</a>
