--- a/tabor.html
+++ b/tabor.html
@@ -51,7 +51,7 @@
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                           </div>
-            <p class="section__text">Podrobné informace i fotografie právě probíhajících turnusů najdete zde: </p>
+            <p class="section__text">Podrobné informace i fotografie z minulých turnusů najdete zde: </p>
               <div class="year_box year_box--width">
                 <a href="./tabory2024.html#tabory2024" class="year_box__text">Tábory 2024</a>
             </div>
