--- a/tabor.html
+++ b/tabor.html
@@ -59,7 +59,7 @@
                 <a href="https://jkvydlakov.rajce.idnes.cz/" class="prize_button prize_button--center">Více fotek zde!</a>
             
             
-            <p class="section__text">Tábory jsou určeny pro děti od 6 do 15 let, které mají rády koně a chtějí se o ně
+            <p class="section__text">Tábory jsou určeny pro děti od 5 do 14 let, které mají rády koně a chtějí se o ně
                 naučit starat.</p>
         </section>
         <section class="section section_tabor section--line">
@@ -71,7 +71,7 @@
                 <li class="list_tabor__item">Během dne se děti učí péči o koně, jízdě na koních a vše co se koní týče,
                 </li>
                 <li class="list_tabor__item">maximální kapacita je 12 míst pro jeden turnus (minimálně musí být obsazeno
-                    8 míst),</li>
+                    5 míst),</li>
                 <li class="list_tabor__item">po celou dobu budeme k zastižení zde:</li>
             </ul>
 
@@ -97,9 +97,9 @@
         <section class="section section_tabor section--line">
             <h3 class="section__heading section__heading--red">Ceny a platební informace:</h3>
             <ul class="section__list list_tabor">
-                <li class="list_tabor__item ">4 500,-/turnus (1 dítě)</li>
+                <li class="list_tabor__item ">5000,-/turnus (1 dítě)</li>
                 <li class="list_tabor__item">platba musí být provedena do <span
-                        class="list_tabor__item--bold">5.6.2024, po dohodě i později </span></li>
+                        class="list_tabor__item--bold">11.6.2025, po dohodě i později </span></li>
                 <li class="list_tabor__item">způsoby platby:</li>
                 <li class="list_tabor__item list_tabor__payment">hotově přímo ve stáji</li>
                 <li class="list_tabor__item list_tabor__payment"><span class="list_tabor__item--block">převodem na účet:</span> <span
@@ -110,11 +110,11 @@
         <section class="section section_tabor section--line">
             <h3 class="section__heading section__heading--red">Turnusy 2024:</h3>
             <ol class="section__list list_tabor order_list" start="">
-                <li class="order_list__item list_tabor__item">1.7. - 5.7.</li>
-                <li class="order_list__item list_tabor__item">8.7. - 12.7.</li>
-                <li class="order_list__item list_tabor__item">15.7. - 19.7.</li>
-                <li class="order_list__item list_tabor__item">22.7. - 26.7.</li>
-                <li class="order_list__item list_tabor__item">5.8 - 9.8.</li>
+                <li class="order_list__item list_tabor__item">30.6. - 4.7.</li>
+                <li class="order_list__item list_tabor__item">7.7. - 11.7.</li>
+                <li class="order_list__item list_tabor__item">14.7. - 18.7.</li>
+                <li class="order_list__item list_tabor__item">21.7. - 25.7.</li>
+                <li class="order_list__item list_tabor__item">4.8.- 8.8.</li>
             </ol>
         </section>
         <section class="section section_tabor section--line">
