--- a/recenze.html
+++ b/recenze.html
@@ -79,6 +79,13 @@
                     Líbilo se mi, že se všichni naučili minimálně základy a zvládli ovládat koně na konci tábora sami. :-) </p>
             </section>
         </div>
+        <div class="section__wrapper">
+            <section class="section main__section">
+         <h3 class="section__heading section__heading_main section__heading--absolute">Sandra Šimková - maminka Honzíka</h3>
+                <p class="section__text section__text--border">S Honzíkem jsme se zúčastnili dvou dětských dnů. Jeden se vydařil méně kvůli nepřízni počasí.
+            Potěšilo ho malování na obličej a soutěže, kde vyhrál gumového hada :-) a samozřejmě jízda na poníkovi Rambíčkovi. </p>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
