--- a/recenze.html
+++ b/recenze.html
@@ -46,21 +46,21 @@
         <p class="section__text section__text--border">Vaše recenze našich akcí nám prosím posílejte na email: langos88@seznam.cz a my je zde zveřejníme. Děkujeme.</p>
         <div class="section__wrapper">
             <section class="section main__section">
-                <h3 class="section__heading section__heading_main section__heading--absolute">Filip Vlček - tatínek Majdy</h3>
+                <h3 class="section__heading section__heading_main section__heading--absolute">Filip Vlček - tatínek Majdy - hodnotí příměstský tábor</h3>
                 <p class="section__text section__text--border">Dcera se zúčastnila třech ročníků příměstského tábora JS Vydlákov. 
                     Pokaždé byla velmi spokojená, bavily jí hry a ježdění na koni. Nejvíc ji za horkých dnů potěšilo plavení koní. </p>
             </section>
         </div>
           <div class="section__wrapper">
             <section class="section main__section">
-         <h3 class="section__heading section__heading_main section__heading--absolute">Lucie Staňková - maminka Anetky, Máji a Rózy</h3>
+         <h3 class="section__heading section__heading_main section__heading--absolute">Lucie Staňková - maminka Anetky, Máji a Rózy - hodnotí dětský den</h3>
                 <p class="section__text section__text--border">Dětského dne JS Vydlákov jsme se zúčastnili s dětmi již podruhé. 
                     Bylo to příjemně strávené dopoledne, děti plnily úkoly a nakonec se povozily na koních. </p>
             </section>
         </div>
          <div class="section__wrapper">
             <section class="section main__section">
-         <h3 class="section__heading section__heading_main section__heading--absolute">Petra Stará - maminka Apolenky</h3>
+         <h3 class="section__heading section__heading_main section__heading--absolute">Petra Stará - maminka Apolenky - hodnotí příměstský tábor</h3>
                 <p class="section__text section__text--border">Moje dcera se na příměstském táboře velmi radovala z plavení koní, to bylo pro ni opravdu velké plus. 
                     Strašně ji bavilo česat poníky. Bavila ji i hra Bota, ta byla zábavná a potom o ní ještě mluvila s paní učitelkou ve škole a hrály ji na tělocviku. </p>
             </section>
@@ -81,9 +81,16 @@
         </div>
         <div class="section__wrapper">
             <section class="section main__section">
-         <h3 class="section__heading section__heading_main section__heading--absolute">Sandra Šimková - maminka Honzíka</h3>
+         <h3 class="section__heading section__heading_main section__heading--absolute">Sandra Šimková - maminka Honzíka - hodnotí dětský den</h3>
                 <p class="section__text section__text--border">S Honzíkem jsme se zúčastnili dvou dětských dnů. Jeden se vydařil méně kvůli nepřízni počasí.
             Potěšilo ho malování na obličej a soutěže, kde vyhrál gumového hada :-) a samozřejmě jízda na poníkovi Rambíčkovi. </p>
+            </section>
+        </div>
+        <div class="section__wrapper">
+            <section class="section main__section">
+         <h3 class="section__heading section__heading_main section__heading--absolute">Alena Labudová - maminka Violky - hodnotí příměstský tábor</h3>
+                <p class="section__text section__text--border">Dcera Vivi byla na koňském táboře nadšená. Užívala si péči o koně, jízdu a zážitky i nové kamarády. Pokaždé
+                  mluvila o tom, jak se těší na další prázdniny u koní. </p>
             </section>
         </div>
     </main>
