--- a/recenze.html
+++ b/recenze.html
@@ -93,6 +93,18 @@
                   mluvila o tom, jak se těší na další prázdniny u koní. </p>
             </section>
         </div>
+        <div class="section__wrapper">
+            <section class="section main__section">
+         <h3 class="section__heading section__heading_main section__heading--absolute">Zdeněk Buben - tatínek Klárky a Natálky - hodnotí příměstský tábor</h3>
+                <p class="section__text section__text--border">Obě holky byly na táboře spoko, tak já jsem taky spoko.</p>
+            </section>
+        </div>
+        <div class="section__wrapper">
+            <section class="section main__section">
+         <h3 class="section__heading section__heading_main section__heading--absolute">Anežka Hartlová - účastnice příměstského tábora</h3>
+                <p class="section__text section__text--border">Nejvíc se mi líbila práce s koňmi a kolem koní. Super byly týmové hry, bezva parta a samozřejmě závěrečné překvapení.. </p>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
