--- a/recenze.html
+++ b/recenze.html
@@ -102,7 +102,7 @@
         <div class="section__wrapper">
             <section class="section main__section">
          <h3 class="section__heading section__heading_main section__heading--absolute">Anežka Hartlová - účastnice příměstského tábora</h3>
-                <p class="section__text section__text--border">Nejvíc se mi líbila práce s koňmi a kolem koní. Super byly týmové hry, bezva parta a samozřejmě závěrečné překvapení.. </p>
+                <p class="section__text section__text--border">Nejvíc se mi líbila práce s koňmi a kolem koní. Super byly týmové hry, bezva parta a samozřejmě závěrečné překvapení.</p>
             </section>
         </div>
     </main>
