--- a/tabor.html
+++ b/tabor.html
@@ -36,7 +36,7 @@
         </nav>
 
         <div class="head_img">
-            <h1 class="head_img__text">JEZDECKÁ SPOLEČNOST VYDLÁKOV - PŘÍMĚSTSKÝ TÁBOR</h1>
+            <h1 class="head_img__text">PŘÍMĚSTSKÝ TÁBOR U KONÍ</h1>
         </div>
     </header>
     <main id="tabor" class="main">
