--- a/recenze.html
+++ b/recenze.html
@@ -105,6 +105,14 @@
                 <p class="section__text section__text--border">Nejvíc se mi líbila práce s koňmi a kolem koní. Super byly týmové hry, bezva parta a samozřejmě závěrečné překvapení.</p>
             </section>
         </div>
+         <div class="section__wrapper">
+            <section class="section main__section">
+         <h3 class="section__heading section__heading_main section__heading--absolute">Petra Bubnová - maminka Klárky a Natálky - hodnotí příměstský tábor</h3>
+                <p class="section__text section__text--border">Naše dvě dcery 16 a 13 let jsou již roky členky JS Vydlákov. Starší již jako klubovka a mladší zatím ve fázi koníčku.
+                    Velmi jako rodiče oceňujeme možnost příměstských táborů (téměř každé prázdniny - jarní, letní, podzimní). Tábory jsou vedeny úžasnými lidmi, přístup a nasazení je víc než skvělé a obrovsky doporučujeme. 
+                Hravě a s veškerou možnou péčí a zázemím se mladší dcera učí, jak se postarat o koně a odměnou jí je ježdění a krásné zážitky.</p>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
