--- a/recenze.html
+++ b/recenze.html
@@ -95,7 +95,7 @@
         </div>
          <div class="section__wrapper">
             <section class="section main__section">
-                <h3 class="section__heading section__heading_main section__heading--absolute">Nikoly Badinková - účastnice příměstského tábora</h3>
+                <h3 class="section__heading section__heading_main section__heading--absolute">Nikola Badinková - účastnice příměstského tábora</h3>
                 <p class="section__text section__text--border">Na táboře jsem potkala spoustu nových a skvělých kamarádů. Bylo zde mnoho zábavy a dobrodružství. Po dobu táboru jsme také plnili různé úkoly a na konci
             na nás čekala zasloužená odměna. Určitě je to nezapomenutelný koňský zážitek. </p>
             </section>
