--- a/tabor.html
+++ b/tabor.html
@@ -46,7 +46,7 @@
             <h3 class="section__heading section__heading--red">Začátek prvního letošního turnusu už se blíží!</h3>
               <div class="section__img img_wrapper">
                  <figure class="img_container__part">
-                                <img src="./imgs/tabor2025.jpg"
+                                <img src="./imgs/taborWA.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
