--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     Pro více informací sledujte náš web a Instagram.
                      <div class="section__img img_wrapper">
                  <figure class="img_container__part">
-                                <img src="./imgs/taborWA.jpg"
+                                <img src="./imgs/TaborWA.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
