--- a/kone.html
+++ b/kone.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="description" content="V naší stáji jsou ustájeni koně kluboví i soukromí různých plemen a velikostí.">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/album.css">
     <link rel="stylesheet" href="./css/main.css">
