--- a/akce.html
+++ b/akce.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="description" content="Pořádáme dětské příměstské tábory s koňmi v Liberci. Dále pořádáme dětské dny plné soutěží a zábavy s koňmi. Nabízíme výukový kroužek jízdy na koni.">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/album.css">
     <link rel="stylesheet" href="./css/main.css">
