--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pořádáme dětské příměstské tábory s koňmi v Liberci. Dále pořádáme dětské dny plné soutěží a zábavy s koňmi. Nabízíme výukový kroužek jízdy na koni.">
+    <meta name="description" content="Dětské příměstské tábory s koňmi v Liberci - jízda na koni, soutěže a zábava. Nabízíme i výukový kroužek a dětské dny plné zážitků.">
     <meta name="google-site-verification" content="DPkU1w-GoHweyS-myS-EzNQIHE7oiwap57bVXxoVrLA" />
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
