--- a/recenze.html
+++ b/recenze.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="DPkU1w-GoHweyS-myS-EzNQIHE7oiwap57bVXxoVrLA" />
-     <meta name="description" content="Pořádáme dětské příměstské tábory s koňmi v Liberci a dětské dny. Napište nám Váš názor, děkujeme.">
+     <meta name="description" content="Pořádáme dětské příměstské tábory s koňmi v Liberci a dětské dny plné soutěží a zábavy.">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/765px.css">
