--- a/tabor.html
+++ b/tabor.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Pořádáme dětské příměstské tábory s koňmi v Liberci pro děti od 5 do 14 let. Probíhají v červenci a srpnu nebo o jarních prázdninách.">
+     <meta name="description" content="Pořádáme dětské příměstské tábory s koňmi v Liberci pro děti od 5 do 14 let plné jízdy na koních a zábavy.">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/765px.css">
