--- a/tabory2024.html
+++ b/tabory2024.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Pořádáme dětské příměstské tábory s koňmi v Liberci. Informace o minulých ročnících najdete zde.">
+     <meta name="description" content="Pořádáme dětské příměstské tábory s koňmi v Liberci plné soutěží a zábavy.">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/album.css">
     <link rel="stylesheet" href="./css/main.css">
