--- a/kone.html
+++ b/kone.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Nabízíme i výukový kroužek jízdy na koni v Liberci.">
+     <meta name="description" content="Nabízíme příměstské tábory i výukový kroužek jízdy na koni v Liberci.">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/album.css">
     <link rel="stylesheet" href="./css/main.css">
