--- a/2021.html
+++ b/2021.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dětské příměstské tábory s koňmi v Liberci - jízda na koni, soutěže a zábava.">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/album.css">
     <link rel="stylesheet" href="./css/main.css">
