--- a/kone.html
+++ b/kone.html
@@ -205,7 +205,7 @@
                             Líza 1</p>
                     </div>
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie poníka Lídra, je to vraník, který má bílé ponožky na zadních nohou a lisinku na hlavě"
+                        <img alt="Fotografie poníka Lídra, je to vraník, který má bílé ponožky na zadních nohou a lysinku na hlavě"
                             src="./imgs/Rocky_S.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
@@ -222,7 +222,7 @@
                             Linda 19</p>
                     </div>
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie poníka Lindora, je to světlejší ryzák, má bílé ponožky na zadních nohou a lisinku na hlavě"
+                        <img alt="Fotografie poníka Lindora, je to světlejší ryzák, má bílé ponožky na zadních nohou a lysinku na hlavě"
                             src="./imgs/Lord_3_S.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
@@ -253,7 +253,7 @@
                         <p class="card_top__matka card_top_text"><span>Matka:</span> Cerlinka</p>
                     </div>
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie ryzáka Rambika, je světlý ryzák a má lisinku" src="./imgs/Rambo_S.jpg"
+                        <img alt="Fotografie ryzáka Rambika, je světlý ryzák a má lysinku" src="./imgs/Rambo_S.jpg"
                             onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
@@ -275,7 +275,7 @@
                             Montilla</p>
                     </div>
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie hnědáka Montyho, má tmavou hřívu a Lysinku na čele"
+                        <img alt="Fotografie hnědáka Montyho, má tmavou hřívu a lysinku na čele"
                             src="./imgs/Monty_S.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
@@ -328,7 +328,7 @@
                     </div>
 
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie Silver. Je to grošák s tmavší hřívou a světlou hlavou"
+                        <img alt="Fotografie Silver. Je to šimla s tmavší hřívou a světlou hlavou"
                             src="./imgs/silver_S.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
@@ -345,7 +345,7 @@
                         </p>
                     </div>
                     <figure class="img_kone__wrapper img_kone__wrapper--vyska">
-                        <img alt="Fotografie hnědáka Devrona, je ztažený z dotihů, má hnědou hřívu"
+                        <img alt="Fotografie hnědáka Devrona, je stažený z dostihů, má hnědou hřívu"
                             src="./imgs/devron_S.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
@@ -397,7 +397,7 @@
                             Gipsy</p>
                     </div>
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie grošáka Dambara, má světlejší nohy a tmavší hřívu"
+                        <img alt="Fotografie bílého poníka na pastvě"
                             src="./akce_foto/IMG_20240618_143754.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
@@ -436,6 +436,7 @@
                         <img alt="Fotografie hříběte tmavého hnědáka na pastvě s nepadnoucí ohlávkou"
                             src="./imgs/felix.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
+                     
                 </div>
                 <div class="section_cards__card card">
                     <div class="card_top">
@@ -449,7 +450,7 @@
                     </div>
 
                     <figure class="img_kone__wrapper">
-                        <img alt="Fotografie koně Ram, mohutný hnědák, je nevyčištěný a má málo udržovanou srst."
+                        <img alt="Fotografie koně Ram, mohutný hnědák, je nevyčištěný a má majitelkou málo udržovanou srst."
                             src="./imgs/Ram1.jpg" onclick="this.classList.toggle('workingImage'); openImg();" />
                     </figure>
                 </div>
