--- a/2025.html
+++ b/2025.html
@@ -56,6 +56,13 @@
                 <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Skok do nového roku 2025</h4>
                   <p class="article_news__text">I letos se nám povedla tato oblíbená novoroční akce. Přejeme všem lidem a koním hodně zdraví a štěstí v novém roce 2025. </p>
+                    
+                      <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./imgs/SaulSobotka2025.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
 
                       <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
