--- a/2025.html
+++ b/2025.html
@@ -49,6 +49,12 @@
             <section class="section_year">
                 <h3 class="section_year__heading">2025</h3>
 
+                   <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Velikonoční hobby závody Sobotka - 20.4.2025</h4>
+                  <p class="article_news__text">Hned druhý den jsme vyrazili do Sobotky znovu. V soutěži 60/70cm startovala Verča s Dambarem a skončili na 3.místě, na 5. místě se umístila Kristýna s Greenhornem a 
+                      pádem bohužel skončil parkur pro Majdu se Sávou. Všechny tři dvojice pak startovaly i v soutěži 70/80cm, kde Kristýna obsadila 4. místo. Jako začátek sezóny byly oba dny povedené!!  </p>
+
+
                   <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Cena Velikonočního beránka Sobotka - 19.4.2025</h4>
                   <p class="article_news__text">Zase nám začala sportovní sezóna. Jako první vyrazila Tina se Saulem do Sobotky, v ZZ 80cm skončili na 3.místě, parkur ZM 90cm bohužel nedokončili. </p>
