--- a/2025.html
+++ b/2025.html
@@ -58,12 +58,15 @@
                   <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Cena Velikonočního beránka Sobotka - 19.4.2025</h4>
                   <p class="article_news__text">Zase nám začala sportovní sezóna. Jako první vyrazila Tina se Saulem do Sobotky, v ZZ 80cm skončili na 3.místě, parkur ZM 90cm bohužel nedokončili. </p>
+                      
                           <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
                                 <img src="./imgs/SaulSobotka2025.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
+                               </div>
+                </article>
 
                 <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Skok do nového roku 2025</h4>
