--- a/2025.html
+++ b/2025.html
@@ -53,6 +53,26 @@
                 <h4 class="article_news__heading">Velikonoční hobby závody Sobotka - 20.4.2025</h4>
                   <p class="article_news__text">Hned druhý den jsme vyrazili do Sobotky znovu. V soutěži 60/70cm startovala Verča s Dambarem a skončili na 3.místě, na 5. místě se umístila Kristýna s Greenhornem a 
                       pádem bohužel skončil parkur pro Majdu se Sávou. Všechny tři dvojice pak startovaly i v soutěži 70/80cm, kde Kristýna obsadila 4. místo. Jako začátek sezóny byly oba dny povedené!!  </p>
+                       
+                      <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./imgs/GreenSobotka2025.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/DambarSobotka2025.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/SaviSobotka2025.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                          </div>
+                </article>
+
 
 
                   <article class="section_year__article article_news">
