--- a/2025.html
+++ b/2025.html
@@ -56,7 +56,7 @@
                        
                       <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./imgs/GreenSobotka2025.jpg"
+                                <img src="./imgs/GreenSobotka2025 - kopie.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
@@ -81,7 +81,7 @@
                       
                           <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./imgs/SaulSobotka2025.jpg"
+                                <img src="./imgs/SaulSobotka2025 - kopie.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
