--- a/2025.html
+++ b/2025.html
@@ -54,6 +54,25 @@
                   <p class="article_news__text">V sobotu 26.4. jsme na naší jízdárně pořádali skok ve volnosti. Z klubových koní se zúčastnil Saul, Greenhorn a Dambar, skákali poprvé a skočili 110cm. Poníci Lordík, Zorro a Rocky přeskákali 90-100cm. Aquabella napoprvé dosáhla výšky 120cm. Dále se zúčastnila Sáva, taktéž poprvé, a skočila 110cm. Výborně si počínali Ram a Silverstone, kteří překonali 130cm. 
 Za fotografie děkujeme Kátě Hartlové. Celé album z tohoto povedeného odpoledne najdete zde. </p>
                      <a href="https://eu.zonerama.com/JSVydlakov1/Album/13180995#check-duplicates" class="prize_button prize_button--center">Fotky naleznete zde!</a>
+                    div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./imgs/skoksilver.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/skokgreen.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                           <figure class="img_container__part">
+                                <img src="./imgs/skoklord.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                          </div>
+                </article>
+
 
                    <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Velikonoční hobby závody Sobotka - 20.4.2025</h4>
