--- a/2025.html
+++ b/2025.html
@@ -106,7 +106,7 @@ Za fotografie děkujeme Kátě Hartlové. Celé album z tohoto povedeného odpol
                       
                           <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./imgs/SaulSobotka2025 - kopie.jpg"
+                                <img src="./imgs/saulsobotkahuk.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
