--- a/index.html
+++ b/index.html
@@ -56,9 +56,15 @@
 
              <section class="section main__section">
                 <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
-                <p class="section__text section__text--border">Letos se můžete těšit na jarní Dětský den, dále na pět turnusů letních příměstských táborů a na podzimní Hubertovu jízdu.  
-                    Pro více informací sledujte náš web a Instagram.
+                 
+                <p class="section__text section__text--border">Už chystáme dětský den - budeme se těšit v sobotu 7.6. od 13h. Pro více informací sledujte náš web a Instagram. </p>
                      <div class="section__img img_wrapper">
+                           <figure class="img_container__part">
+                                <img src="./imgs/detskydenWA.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                          </div>
                  <figure class="img_container__part">
                                 <img src="./imgs/TaborWA.jpg"
                                     alt=""
