--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <h3 class="section__heading section__heading_main section__heading--absolute">Akce pro veřejnost</h3>
                  
                 <p class="section__text section__text--border">Už chystáme dětský den - budeme se těšit v sobotu 7.6. od 13h. Pro více informací sledujte náš web a Instagram. </p>
+                 <p class="section__text section__text--border">Ještě zbývá volných pár míst v některých turnusech našich příměstských táborů. Více informací najdete pod záložkou Příměstský tábor. </p>    
                      <div class="section__img img_wrapper">
                            <figure class="img_container__part">
                                 <img src="./imgs/detskydenWA.jpg"
