--- a/tabor.html
+++ b/tabor.html
@@ -43,8 +43,8 @@
     <main id="tabor" class="main">
         <section class="section section_tabor">
             <h2  class="section__heading">Příměstský tábor</h2>
-            <p class="section__text">Naše jezdecká stáj Vydlákov pořádá každý rok příměstské tábory u koní.</p>  
-            <h3 class="section__heading section__heading--red">Začátek prvního letošního turnusu už se blíží!</h3>
+            <p class="section__text">Naše jezdecká stáj Vydlákov pořádá každý rok příměstské tábory u koní. V tomto ročníků zbývá již jen pár volných míst v některých turnusech!</p>  
+           
               <div class="section__img img_wrapper">
                  <figure class="img_container__part">
                                 <img src="./imgs/TaborWA.jpg"
