--- a/tabor.html
+++ b/tabor.html
@@ -43,7 +43,8 @@
     <main id="tabor" class="main">
         <section class="section section_tabor">
             <h2  class="section__heading">Příměstský tábor</h2>
-            <p class="section__text">Naše jezdecká stáj Vydlákov pořádá každý rok příměstské tábory u koní. V tomto ročníků zbývá již jen pár volných míst v některých turnusech!</p>  
+            <p class="section__text">Naše jezdecká stáj Vydlákov pořádá každý rok příměstské tábory u koní. V tomto ročníku zbývá již jen pár volných míst v některých turnusech. 
+                Nečekejte s přihlášením na poslední chvíli!</p>  
            
               <div class="section__img img_wrapper">
                  <figure class="img_container__part">
