--- a/2025.html
+++ b/2025.html
@@ -49,6 +49,20 @@
             <section class="section_year">
                 <h3 class="section_year__heading">2025</h3>
 
+                  <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Jezdecké závody JK Komárno - Nymburk 3.5.2025</h4>
+                  <p class="article_news__text">Hned druhý den jsme vyrazili do Sobotky znovu. V soutěži 60/70cm startovala Verča s Dambarem a skončili na 3.místě, na 5. místě se umístila Kristýna s Greenhornem a 
+                      pádem bohužel skončil parkur pro Majdu se Sávou. Všechny tři dvojice pak startovaly i v soutěži 70/80cm, kde Kristýna obsadila 4. místo. Jako začátek sezóny byly oba dny povedené!!  </p>
+                       
+                      <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./imgs/GreenSobotka2025 - kopie.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                                </div>
+                </article>
+
                 <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Skok ve volnosti</h4>
                   <p class="article_news__text">V sobotu 26.4. jsme na naší jízdárně pořádali skok ve volnosti. Z klubových koní se zúčastnil Saul, Greenhorn a Dambar, skákali poprvé a skočili 110cm. Poníci Lordík, Zorro a Rocky přeskákali 90-100cm. Aquabella napoprvé dosáhla výšky 120cm. Dále se zúčastnila Sáva, taktéž poprvé, a skočila 110cm. Výborně si počínali Ram a Silverstone, kteří překonali 130cm. 
