--- a/2025.html
+++ b/2025.html
@@ -51,12 +51,14 @@
 
                   <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Jezdecké závody JK Komárno - Nymburk 3.5.2025</h4>
-                  <p class="article_news__text">Hned druhý den jsme vyrazili do Sobotky znovu. V soutěži 60/70cm startovala Verča s Dambarem a skončili na 3.místě, na 5. místě se umístila Kristýna s Greenhornem a 
-                      pádem bohužel skončil parkur pro Majdu se Sávou. Všechny tři dvojice pak startovaly i v soutěži 70/80cm, kde Kristýna obsadila 4. místo. Jako začátek sezóny byly oba dny povedené!!  </p>
+                  <p class="article_news__text"V sobotu časně ráno jsme vyrazili na závody do Nymburka, které byly premiérou pro Aquabellu. Společnost na prvním výletě jí dělala Sauvageonne. Aquabella i Sauvageonne 
+                      startovaly v prvních dvou hobby parkurech do 70cm a do 80cm, v sedle Aquy byla Tina a Sávu parkury provedla Majda. Obě klisny cestovaly i závodily v pohodě. Aquabeela šla pokaždé čistě, 
+                      radost z jejího projevu ještě umocnilo 4. místo v parkuru do 70cm. Majda se Sávou absolvovala oba parkury s malými chybami, ale dojela je bez pádu.
+                    Závody byly perfektně zorganizované, děkujeme pořadatelům.  </p>
                        
                       <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./imgs/GreenSobotka2025 - kopie.jpg"
+                                <img src="./imgs/nymburskupina.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
