--- a/2025.html
+++ b/2025.html
@@ -54,11 +54,11 @@
                   <p class="article_news__text"V sobotu časně ráno jsme vyrazili na závody do Nymburka, které byly premiérou pro Aquabellu. Společnost na prvním výletě jí dělala Sauvageonne. Aquabella i Sauvageonne 
                       startovaly v prvních dvou hobby parkurech do 70cm a do 80cm, v sedle Aquy byla Tina a Sávu parkury provedla Majda. Obě klisny cestovaly i závodily v pohodě. Aquabeela šla pokaždé čistě, 
                       radost z jejího projevu ještě umocnilo 4. místo v parkuru do 70cm. Majda se Sávou absolvovala oba parkury s malými chybami, ale dojela je bez pádu.
-                    Závody byly perfektně zorganizované, děkujeme pořadatelům.  </p>
+                    Závody byly perfektně zorganizované, děkujeme pořadatelům.</p>
                        
                       <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
-                                <img src="./imgs/nymburskupina.jpg"
+                                <img src="./imgs/nymburkskupina.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
