--- a/2025.html
+++ b/2025.html
@@ -51,7 +51,8 @@
 
                   <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Jezdecké závody JK Komárno - Nymburk 3.5.2025</h4>
-                  <p class="article_news__text"V sobotu časně ráno jsme vyrazili na závody do Nymburka, které byly premiérou pro Aquabellu. Společnost na prvním výletě jí dělala Sauvageonne. Aquabella i Sauvageonne 
+                 
+                  <p class="article_news__text">V sobotu časně ráno jsme vyrazili na závody do Nymburka, které byly premiérou pro Aquabellu. Společnost na prvním výletě jí dělala Sauvageonne. Aquabella i Sauvageonne 
                       startovaly v prvních dvou hobby parkurech do 70cm a do 80cm, v sedle Aquy byla Tina a Sávu parkury provedla Majda. Obě klisny cestovaly i závodily v pohodě. Aquabeela šla pokaždé čistě, 
                       radost z jejího projevu ještě umocnilo 4. místo v parkuru do 70cm. Majda se Sávou absolvovala oba parkury s malými chybami, ale dojela je bez pádu.
                     Závody byly perfektně zorganizované, děkujeme pořadatelům.</p>
