--- a/2025.html
+++ b/2025.html
@@ -49,6 +49,11 @@
             <section class="section_year">
                 <h3 class="section_year__heading">2025</h3>
 
+                 <article class="section_year__article article_news">
+                <h4 class="article_news__heading">Náš dlouho očekávaný přírůstek</h4>
+                     
+                        <p class="article_news__text">V pondělí 12.5.2025 se nad ránem narodil Karole hřebeček. Všechno dobře dopadlo, hříbě i kobyla jsou v naprostém pořádku. </p>
+
                   <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Jezdecké závody JK Komárno - Nymburk 3.5.2025</h4>
                  
