--- a/2025.html
+++ b/2025.html
@@ -61,7 +61,8 @@
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
-                              
+                               </div>
+                     
                       <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
                                 <img src="./imgs/hribe2.jpg"
