--- a/2025.html
+++ b/2025.html
@@ -70,6 +70,7 @@
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
                                 </div>
+                         </article>
 
                   <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Jezdecké závody JK Komárno - Nymburk 3.5.2025</h4>
@@ -82,6 +83,22 @@
                       <div class="img_container article_news__imgs">
                  <figure class="img_container__part">
                                 <img src="./imgs/nymburkskupina.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                                </div>
+                      
+                       <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./imgs/tinanymburk.jpg"
+                                    alt=""
+                                    onclick="this.classList.toggle('workingImage'); openImg();">
+                            </figure>
+                                </div>
+                      
+                       <div class="img_container article_news__imgs">
+                 <figure class="img_container__part">
+                                <img src="./imgs/majdanymburk.jpg"
                                     alt=""
                                     onclick="this.classList.toggle('workingImage'); openImg();">
                             </figure>
