--- a/2025.html
+++ b/2025.html
@@ -52,7 +52,7 @@
                  <article class="section_year__article article_news">
                 <h4 class="article_news__heading">Náš dlouho očekávaný přírůstek</h4>
                      
-                        <p class="article_news__text">V pondělí 12.5.2025 se nad ránem narodil Karole hřebeček. Všechno dobře dopadlo, hříbě i kobyla jsou v naprostém pořádku. </p>
+                        <p class="article_news__text">V pondělí 12.5.2025 se nad ránem narodil Karole hřebeček. Všechno dobře dopadlo, hříbě i kobyla jsou v naprostém pořádku. </p> Jmenuje se Kornelius.  </p>
 
                        
                       <div class="img_container article_news__imgs">
